[package]
name = "kde-emst"
version = "0.1.0"
authors = ["Abhik Jain <abhikjain360@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapacke = "0.3.0"
cblas = "0.3.0"
fnv = "1.0.7"
bitvec = "0.21.1"
rand = "0.8.3"

# [profile.release]
# lto = "fat"
# codegen-units = 1
# panic = "abort"
